--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "super-tebex",
+  "name": "@neosia-core/super-tebex",
   "type": "module",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "description": "",
+  "description": "SDK Tebex permettant une intégration facile dans un environnement",
   "exports": {
     "types": "./dist/index.d.ts",
     "import": "./dist/index.js",
     "require": "./dist/index.cjs"
   },
   "scripts": {
-    "build": "bun run build.ts",
-    "prepublishOnly": "bun run build"
+    "prepublishOnly": "bun run build",
+    "lint": "eslint . --fix",
+    "clean": "bun --bun run format && bun --bun run lint",
+    "format": "prettier --write .",
+    "prepare": "husky",
+    "test:ui": "bunx vitest --ui",
+    "coverage": "vitest run --coverage",
+    "test": "vitest"
   },
   "files": [
     "dist"
@@ -22,15 +28,46 @@
     "bun"
   ],
   "license": "MIT",
-  "homepage": "https://github.com/wobsoriano/pkg-name#readme",
+  "homepage": "https://github.com/NeosiaNexus/super-tebex#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wobsoriano/pkg-name.git"
+    "url": "git+https://github.com/NeosiaNexus/super-tebex.git"
   },
-  "bugs": "https://github.com/wobsoriano/pkg-name/issues",
-  "author": "Robert Soriano <sorianorobertc@gmail.com>",
+  "bugs": "https://github.com/NeosiaNexus/super-tebex/issues",
+  "author": "NeosiaNexus <devneosianexus@gmail.com>",
   "devDependencies": {
+    "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.2.18",
+    "@types/jest": "^30.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@vitejs/plugin-react": "^4.6.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "bun-plugin-dts": "^0.3.0",
-    "@types/bun": "^1.1.10"
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-no-floating-promise": "^2.0.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.13",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@tebexio/tebex.js": "^1.7.0",
+    "sonner": "^2.0.6",
+    "tebex_headless": "^1.15.1",
+    "zustand": "^5.0.6"
   }
 }
