--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2020",
-    "module": "esnext",
+    "module": "module",
     "strict": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
