--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "@neosia-core/super-tebex",
+  "name": "@neosianexus/super-tebex",
   "type": "module",
   "version": "1.0.0",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "description": "SDK Tebex permettant une intégration facile dans un environnement",
+  "publishConfig": {
+    "access": "public"
+  },
   "exports": {
     "types": "./dist/index.d.ts",
     "import": "./dist/index.js",
     "require": "./dist/index.cjs"
   },
   "scripts": {
+    "build": "bun run build.ts",
     "prepublishOnly": "bun run build",
     "lint": "eslint . --fix",
     "clean": "bun --bun run format && bun --bun run lint",
     "format": "prettier --write .",
-    "prepare": "husky",
+    "prepare": "bun clean && bun run build",
     "test:ui": "bunx vitest --ui",
     "coverage": "vitest run --coverage",
     "test": "vitest"
