--- a/package.json
+++ b/package.json
@@ -66,11 +66,17 @@
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "dependencies": {
     "sonner": "^2.0.6",
     "tebex_headless": "^1.15.1",
     "zustand": "^5.0.6"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
