--- a/package.json
+++ b/package.json
@@ -1,51 +1,61 @@
 {
-  "name": "@neosianexus/super-tebex",
+  "name": "@neosia/tebex-nextjs",
+  "version": "3.0.0",
+  "description": "Tebex Headless SDK optimized for Next.js App Router with TanStack Query",
   "type": "module",
-  "version": "2.0.2",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "description": "SDK Tebex permettant une intégration facile dans un environnement",
-  "publishConfig": {
-    "access": "public"
-  },
   "exports": {
-    "types": "./dist/index.d.ts",
-    "import": "./dist/index.js",
-    "require": "./dist/index.cjs"
-  },
-  "scripts": {
-    "build": "bun run build.ts",
-    "prepublishOnly": "bun run build",
-    "lint": "eslint . --fix",
-    "clean": "bun --bun run format && bun --bun run lint",
-    "format": "prettier --write .",
-    "prepare": "bun clean && bun run build",
-    "test:ui": "bunx vitest --ui",
-    "coverage": "vitest run --coverage",
-    "test": "vitest"
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
   "files": [
     "dist"
   ],
-  "keywords": [
-    "bun"
-  ],
-  "license": "MIT",
-  "homepage": "https://github.com/NeosiaNexus/super-tebex#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/NeosiaNexus/super-tebex.git"
+  "sideEffects": false,
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   },
-  "bugs": "https://github.com/NeosiaNexus/super-tebex/issues",
-  "author": "NeosiaNexus <devneosianexus@gmail.com>",
+  "scripts": {
+    "build": "bun run build.ts",
+    "dev": "bun run build.ts --watch",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint . --fix",
+    "format": "prettier --write .",
+    "clean": "bun run format && bun run lint",
+    "prepare": "bun clean && bun run build",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage",
+    "prepublishOnly": "bun run build"
+  },
+  "peerDependencies": {
+    "react": "^18.3.1 || ^19.0.0",
+    "react-dom": "^18.3.1 || ^19.0.0",
+    "next": "^14.0.0 || ^15.0.0",
+    "@tanstack/react-query": "^5.0.0",
+    "zustand": "^5.0.0",
+    "tebex_headless": "^1.15.0"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    }
+  },
   "devDependencies": {
     "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
+    "@tanstack/react-query": "^5.62.0",
+    "@tanstack/react-query-devtools": "^5.62.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/bun": "^1.2.18",
-    "@types/jest": "^30.0.0",
+    "@types/react": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
     "@vitejs/plugin-react": "^4.6.0",
@@ -61,21 +71,38 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "husky": "^9.1.7",
     "jsdom": "^26.1.0",
+    "msw": "^2.7.0",
+    "next": "^15.0.0",
     "prettier": "^3.6.2",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "vitest": "^3.2.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "dependencies": {},
-  "peerDependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^5.0.6",
-    "sonner": "^2.0.6",
-    "tebex_headless": "^1.15.1"
+    "tebex_headless": "^1.15.1",
+    "typescript": "^5.7.0",
+    "vitest": "^3.2.4",
+    "zustand": "^5.0.0"
+  },
+  "keywords": [
+    "tebex",
+    "nextjs",
+    "react",
+    "headless",
+    "ecommerce",
+    "minecraft",
+    "game-server",
+    "tanstack-query",
+    "react-query"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NeosiaNexus/tebex-nextjs.git"
+  },
+  "author": "NeosiaNexus <devneosianexus@gmail.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/NeosiaNexus/tebex-nextjs#readme",
+  "bugs": "https://github.com/NeosiaNexus/tebex-nextjs/issues",
+  "engines": {
+    "node": ">=18"
   }
 }
